--- a/profile.html
+++ b/profile.html
@@ -43,8 +43,8 @@
   <script>
     // Simulated user info (future: replace with real database)
     const user = {
-      name: 'Nathaniel Besere',
-      email: 'user@example.com',
+      name: 'NCal (Under Development)',
+      email: 'user@example.tpc.com',
       memberSince: 'June 2025'
     };
 
