Updated profile layout, style, 2 weeks of progress

--- a/profile.html
+++ b/profile.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RandomShop | Profile</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="global.css" />
+  <link rel="stylesheet" href="dark.css" />
 </head>
-<body>
-
-  <script>
-    if (localStorage.getItem('loggedIn') !== 'true') {
-      alert('You must be logged in to access your profile.');
-      window.location.href = 'login.html';
-    }
-  </script>
+<body class="light-mode">
 
   <header>
     <div class="container">
@@ -21,51 +15,34 @@
       <nav>
         <ul>
           <li><a href="main_page.html">Home</a></li>
+          <li><a href="main_page.html#products">Products</a></li>
           <li><a href="cart.html">Cart</a></li>
-          <li><a href="profile.html">Profile</a></li>
           <li><a href="login.html" id="auth-link">Login</a></li>
         </ul>
       </nav>
+      <button id="darkToggle">Dark Mode</button>
     </div>
   </header>
 
-  <main class="container">
-    <h2>Welcome to Your Profile</h2>
-    <p id="user-info">Loading user information...</p>
+  <main class="container profile-page">
+    <div class="profile-card">
+      <label for="avatarUpload" class="profile-avatar-label">
+        <img id="profileAvatar" class="profile-avatar" src="default-avatar.png" alt="Profile Picture" />
+        <input type="file" id="avatarUpload" accept="image/*" style="display: none;" />
+      </label>
+      <h2 id="profile-name">Loading...</h2>
+      <p><strong>Email:</strong> <span id="profile-email">...</span></p>
+      <p><strong>Member Since:</strong> <span id="profile-date">...</span></p>
+    </div>
   </main>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 SimpleShop. All rights reserved.</p>
+      <p>&copy; 2025 RandomShop. All rights reserved.</p>
     </div>
   </footer>
 
-  <script>
-    // Simulated user info (future: replace with real database)
-    const user = {
-      name: 'NCal (Under Development)',
-      email: 'user@example.tpc.com',
-      memberSince: 'June 2025'
-    };
-
-    document.getElementById('user-info').innerHTML = `
-      <strong>Name:</strong> ${user.name}<br>
-      <strong>Email:</strong> ${user.email}<br>
-      <strong>Member Since:</strong> ${user.memberSince}
-    `;
-
-    // Auth toggle
-    const isLoggedIn = localStorage.getItem('loggedIn') === 'true';
-    const loginLink = document.getElementById('auth-link');
-    if (isLoggedIn && loginLink) {
-      loginLink.textContent = 'Logout';
-      loginLink.href = '#';
-      loginLink.onclick = () => {
-        localStorage.setItem('loggedIn', 'false');
-        window.location.href = 'login.html';
-      };
-    }
-  </script>
+  <script src="profile_script.js"></script>
 
 </body>
 </html>
