--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>RandomShop | Cart</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="global.css">
+  <link rel="stylesheet" href="dark.css">
 </head>
 <body>
 
@@ -14,7 +15,8 @@
       <nav>
         <ul>
           <li><a href="main_page.html">Home</a></li>
-          <li><a href="cart.html">Cart</a></li>
+          <li><a href="main_page.html#products">Products</a></li>
+          <li><a href="profile.html">Profile</a></li>
           <li><a href="login.html" id="auth-link">Login</a></li>
         </ul>
       </nav>
