--- a/checkout.html
+++ b/checkout.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SimpleShop | Checkout</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="global.css">
+  <link rel="stylesheet" href="dark.css">
 </head>
 <body>
 
@@ -63,7 +64,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 SimpleShop. All rights reserved.</p>
+      <p>&copy; 2025 RandomShop. All rights reserved.</p>
     </div>
   </footer>
 
