umm.. default profile

--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,7 @@
   <main class="container profile-page">
     <div class="profile-card">
       <label for="avatarUpload" class="profile-avatar-label">
-        <img id="profileAvatar" class="profile-avatar" src="default-avatar.png" alt="Profile Picture" />
+        <img id="profileAvatar" class="profile-avatar" src="https://cdnb.artstation.com/p/assets/images/images/043/322/445/large/jagdcent-liliwan-goldsi.jpg?1636956979" alt="Profile Picture" />
         <input type="file" id="avatarUpload" accept="image/*" style="display: none;" />
       </label>
       <h2 id="profile-name">Loading...</h2>
